2009-11-15  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        Add bugzilla-tool check-style
        https://bugs.webkit.org/show_bug.cgi?id=31515

        * Scripts/bugzilla-tool:
        * Scripts/modules/bugzilla.py:

2009-11-13  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Simon Hausmann.

        Make the Qt Linux only --valgrind feature, suppress errors
        defined in the SuppressedValgrindErrors file.

        * Scripts/run-webkit-tests:

2009-11-13  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Simon Hausmann.

        Set the locale to C and not to the current one in use on the system.

        * DumpRenderTree/qt/DumpRenderTree.cpp:
        (WebCore::DumpRenderTree::resetToConsistentStateBeforeTesting):

2009-11-13  Adam Roben  <aroben@apple.com>

        Add support for
        http/tests/security/isolatedWorld/didClearWindowObject.html

        Fixes <http://webkit.org/b/31124> Tell the WebFrameLoadDelegate when
        window objects in isolated worlds are cleared

        Reviewed by Dave Hyatt.

        * DumpRenderTree/mac/DumpRenderTreeMac.h: Declared worldIDForWorld.

        * DumpRenderTree/mac/FrameLoadDelegate.mm:
        (-[FrameLoadDelegate didClearWindowObjectInStandardWorldForFrame:]):
        Added. Moved code here from -webView:didClearWindowObject:forFrame:.
        (-[FrameLoadDelegate didClearWindowObjectForFrame:inIsolatedWorld:]):
        Added. Sets a __worldID property on the global object whose value is
        the ID of this world.
        (-[FrameLoadDelegate webView:didClearWindowObjectForFrame:inScriptWorld:]):
        Respond to this new delegate callback by calling through to one of the
        above new methods.
        * DumpRenderTree/mac/LayoutTestControllerMac.mm:
        (worldMap): Added. Returns a HashMap containing all the worlds we've
        created.
        (worldIDForWorld): Added. Returns the ID for this world, or 0 if we